# bililiverobot-gui

./: CMakeLists.txt  Prototype.html  Prototype2.html  README.md  test_build.sh
qml/: BlindboxPage.qml  DanmakuPage.qml  FollowPage.qml  GiftPage.qml  InteractionPage.qml  LoginInfoPage.qml  LoginPage.qml  MainPage.qml  PKPage.qml  SettingsPage.qml  SharePage.qml  Sidebar.qml  StatsPage.qml  WelcomePage.qml  main.qml
src/: BilibiliApi.cpp  BilibiliApi.h  DanmakuModel.cpp  DanmakuModel.h  SettingsManager.cpp  SettingsManager.h  TTSManager.cpp  TTSManager.h  main.cpp
